--- a/hello_app/Gemfile
+++ b/hello_app/Gemfile
@@ -23,3 +23,7 @@ end
 
 # Windows環境ではtzinfo-dataというgemを含める必要があります
 gem 'tzinfo-data', platforms: [:mingw, :mswin, :x64_mingw, :jruby]
+
+group :production do
+  gem 'pg', '0.18.4'
+end
